# remotevision

./: .gitignore  CMakeLists.txt  Command.cpp  Command.h  CommandContext.cpp  CommandContext.h  CommandHandler.cpp  CommandHandler.h  CommandMgr.cpp  CommandMgr.h  CommandReader.cpp  CommandReader.h  Commander.cpp  Commander.h  Error.cpp  Error.h  Exceptions.cpp  FrameRate.cpp  FrameRate.h  Geometry.cpp  Geometry.h  IODevice.cpp  IODevice.h  ImageBuffer.cpp  ImageBuffer.h  ImageFormat.h  Log.cpp  Log.h  PixelFormat.h  PosixServerSocket.cpp  PosixServerSocket.h  PosixSocket.cpp  PosixSocket.h  PosixSocketAddress.cpp  PosixSocketAddress.h  Protocol.h  RString.h  RemoteVision.cpp  RemoteVision.h  Serializable.hpp  (+21 more)
CmakeModules/: FindFFMPEG.cmake
android/: AndroidManifest.xml
android/jni/: Android.mk  Application.mk  jni.cpp  rv_jni.cpp  rv_jni.h  rv_service.cpp  rv_service.h
android/jni/remotevision/: Android.mk
android/res/layout/: main.xml  setting.xml  setting_relay_mode.xml  setting_server_mode.xml
android/res/values/: strings.xml
android/res/xml/: preferences.xml
android/src/com/lfcinvention/RemoteVision/: InfoActivity.java  NativeError.java  NativePreviewImage.java  NetworkConfiguration.java  Notification.java  Preference.java  ServiceConfiguration.java  SettingActivity.java  VideoService.java
codecs/: VideoCodecId.h  VideoCodecInfo.cpp
commands/: CommandBuilder.cpp  CommandBuilder.h  GetDataPortCommandHandler.cpp  GetDataPortCommandHandler.h  Init.cpp  QueryInfoCommandHandler.cpp  QueryInfoCommandHandler.h  VideoCommand.cpp  VideoCommand.h
drivers/Linux/user-v4l2/: .gitignore
drivers/Linux/user-v4l2/kernel/: Makefile  common.c  common.h  control.h  file.c  ioreq.c  ioreq.h  ioreqs.h  v4l2.c  v4l2.h
medium/: CMakeLists.txt  TCPFFMpegRelayClient.cpp  TCPFFMpegRelayClient.h  TCPFFMpegRelayServer.cpp  TCPFFMpegRelayServer.h  TCPFFMpegServer.cpp  TCPFFMpegServer.h  TCPServerSocket.cpp  TCPServerSocket.h  TCPSocket.cpp  TCPSocket.h  TCPSocketAddress.cpp  TCPSocketAddress.h
platform/: CMakeLists.txt  PosixServerSocket.cpp  PosixSocket.cpp  PosixSocket.h  PosixSocketAddress.h  PosixThread.cpp
platform/android/: CMakeLists.txt  NativeError.cpp  NativeError.h  rv_jni.cpp  rv_jni.h  rv_jni_old.cpp
platform/errors/: CMakeLists.txt  PosixErrors.cpp  Win32Errors.cpp
platform/posix/: CMakeLists.txt  Errors.cpp  PosixCompactHeader.h  PosixServerSocket.cpp  PosixServerSocket.h  PosixSocket.cpp  PosixSocket.h  PosixSocketAddress.h  PosixSocketDemuxer.cpp  PosixSocketDemuxer.h  PosixThread.cpp  errno_map.h
platform/win32/: Errors.cpp  Win32Socket.cpp  Win32Socket.h  Win32SocketAddress.cpp  Win32SocketAddress.h  errno_map.h  win32_config.h
providers/: CMakeLists.txt  FFMpegInfo.cpp  FFMpegInfo.h  FFMpegVideoProvider.cpp  FFMpegVideoProvider.h
test/: CMakeLists.txt  TestClient.cpp  TestFFMPEG.cpp  TestNetwork.cpp  TestServer.cpp  TestUtils.cpp
test/VideoPreviewer/: CMakeLists.txt  connectdialog.cpp  connectdialog.h  connectdialog.ui  connectthread.cpp  connectthread.h  ipvalidator.cpp  ipvalidator.h  main.cpp  videopreviewer.cpp  videopreviewer.h  videopreviewer.ui
tools/: CMakeLists.txt  TCPRelayServer.cpp
utils/: Misc.hpp  NonCopyable.hpp  SharedPtr.hpp  String.hpp  Utils.h
vsources/: IOVideoSource.cpp  IOVideoSource.h
